@@ -1,3 +1,8 @@
 
 sl2d_scriptsdir = $(pkgdatadir)
-dist_sl2d_scripts_SCRIPTS = ffmpeg_pipe_ezstream.sh prepare_ezstream_conf.sh mail.py
+dist_sl2d_scripts_SCRIPTS = \
+	ffmpeg_pipe_ezstream.sh \
+	ffmpeg_pipe_push.sh \
+	prepare_ezstream_conf.sh \
+	mail.py \
+	push.py
