@@ -6,6 +6,8 @@ Version 0.3.0~dev
 	* Fix a typo in post-command execution.
 	* Fix crash trying to start main command, subprocess.Popen needs to be
 	  wrapped in try/except due to a bug in subprocess, closes: #2239.
+	* Add wrapper script for detecting network connection problems,
+	  closes: #2229.
 
 Version 0.2.5 Released on 2009/07/17
 
